--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <header class="header">
+        <a class="icon" href="./pages/modoh.html">
+            <img src="./assets/fuego.png" alt="icon fuego">
+        </a>
         <h1>Para mi amor, Paola</h1>
     </header>
     <main>
@@ -47,7 +50,7 @@
                 <img src="./assets/concierto.jpg" alt="foto" class="foto-concierto">
             </aside>
             <div class="container-txt">
-                <h1 class="title">Mi corazón</h1>
+                <h1 class="title">Mi bb</h1>
                 <p class="txt-foto">
                     Espero que podamos compartir más momentos juntos y que tambien yo me acostumbre a tu manera en la que sales para yo poder estar tranquilo y no ir solo a lo que voy o vamos. Disculpa si te molesta mi manera de ser y al final, es algo que tengo que cambiar
                     porque supongo que habrá veces en las que te voy a tener que acompañar por alguna u otra razón y pueda convivir perfectamente contigo sin que haya problemas, si tú haces cosas por mí, que yo no haga por tí, no me parece justo.
